--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,30 @@ body {
     background-color: var(--bg-color);
 }
 
+.back-to-home {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+}
+
+.back-to-home-link {
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 1.5rem;
+}
+
+.back-to-home-link:hover {
+    text-decoration: underline;
+}
+
+.note-to-reader {
+    color: var(--text-color);
+    font-size: 0.8rem;
+}
+
 /* Base styles (320px - 639px) */
 
 .page-wrapper {
@@ -209,6 +233,89 @@ main {
     margin-bottom: 1rem;
 }
 
+/* E-commerce Web App Project Page */
+
+.project-wrapper {
+    width: 100%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+}
+
+.project-step-display-box {
+    width: 100%;
+    max-width: 30rem;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+    text-align: center;
+    padding-bottom: 0.5rem;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    border: 0.1rem solid var(--ghost-color);
+}
+
+.project-step-img {
+    width: 100%;
+}
+
+.project-step-desc {
+    font-size: 1.2rem;
+}
+
+/* E-commerce Web App Project Page */
+
+/* PROJECTS */
+
+.projects-section-home {
+    width: 100%;
+    border-radius: 0.5rem;
+    padding: 0.5rem 0.5rem;
+    background-color: var(--shade-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.projects-section-wrapper {
+    width: 100%;
+    max-width: 48rem;
+    display: flex;
+    gap: 1rem;
+    margin-top: 1rem;
+}
+
+.project-box-home {
+    width: 10rem;
+    overflow: hidden;
+    padding: 0.5rem;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+    text-align: center;
+    border-radius: 0.2rem;
+    border: solid 0.1rem var(--text-color);
+    cursor: pointer;
+    text-decoration: none;
+    color: var(--text-color);
+}
+
+.project-img {
+    width: 100%;
+}
+
+.project-title-home {
+    font-weight: 600;
+}
+
+/* PROJECTS */
+
+
+/* CONTACT FORM */
+
 .contact-form-container {
     text-align: center;
     margin-bottom: 5rem;
@@ -263,6 +370,10 @@ form {
     width: 100%;
 }
 
+/* CONTACT FORM */
+
+/* FOOTER */
+
 .footer-wrapper {
     display: flex;
     flex-direction: column;
@@ -292,7 +403,7 @@ form {
     text-align: center;
 }
 
-
+/* FOOTER */
 
 
 
